# wp-python

./: .gitignore  .gitmodules  .gpgrc  .vimspector.json  7  README.md  convert-fonts.py  create-project.py  google-data.csv.gpg  init.py  list.csv.gpg  main.py  plugins.py  pyproject.toml  requirements.txt  todo  todo.md  wp-init.sh  wp-reset.sh  wp.py  wp_theme_path.txt
acf/: acf.py
acf/json/: page-home.json
backups/: backups.py  createAndCopyToMnt.py  deleteBackup.py  deleteBackupInChrome.py  downloadBackup.py  getLoginUrl.py  listBackup.py  makeBackup.py  makeBackupInChrome.py  restoreBackup.py  restoreBackupInChrome.py  restoreFromDownloads.py  waitForCaptcha.py
classes/: Backup.py  CreateFile.py  DefaultFile.py  FilesHandle.py  ImagesClass.py  InputValidator.py  InterfaceFile.py  JsFile.py  MySelenium.py  MyTable.py  Notification.py  PhpFile.py  PhpIcon.py  PhpPage.py  PiniaFile.py  Plugin.py  Print.py  Project.py  ScssFile.py  ThemePathFromFile.py  ThemePathToFile.py  Utils.py  WpCli.py
classes/Acf/: AcfMenu.py  Field.py  FileField.py  GalleryField.py  GroupField.py  ImageField.py  RepeaterField.py  Section.py  SelectSection.py  TabField.py  TextField.py  TextareaField.py  WysiwygField.py
contact_forms/: checkHoneypot.py  checkRandomFields.py  contact_forms.csv  contact_settins.py  createProjectsFolder.py  formToFiles.py  generateEmail.py  getContactForm.py  getRandomFields.py  getRequiredFileds.py  getSubmitedFields.py  random_fields.csv  sendEmail.py  showContactFormFields.py  showContactFormFiles.py  showRandomFields.py  submit-form.txt
data/: base_plugins.py  config.cfg  list.csv.gpg  plugins.py  projects.csv
init/: init.py
layouts/: default-hook.ts  interface.ts  js_layout.ts  php-page.php  type.ts
libs/: buffer.py  camelToKebabCase.py  chooseDir.py  chooseFile.py  chooseFileForWp.py  file.py  getFilePathWithoutExtenstion.py  insertBeforeLastLine.py  listDir.py  listFiles.py  listFilesWithPrefix.py  orderFiles.py  richTable.py  screenSize.py  select.py  selectWithFzf.py
menu/: contactForms.py  select_section.py
modules/acf/: create_field.py
my_types/: NTPage.py
python-libs/: README.md  buffer.py  getFilePathWithoutExtenstion.py  listDir.py  select.py
python-wp-files/: wp.py
python-wp-files/wp_files/: checkPhpLayout.py  checkRestApiLayout.py  checkVueLayout.py  createHookFile.py  createInterfaceFile.py  createJavascriptFile.py  createOrChooseDirectory.py  createPhpAndScss.py  createPhpComponentFile.py  createPhpPage.py  createPiniaFile.py  createRestApiFile.py  createScssFile.py  createVueFile.py
python-wp-utils/: py-aiwm.py  wp-themes.py
scripts/: createBackup.sh  listBackup.sh
smtp/: apiSection.py  findOrCreateProject.py  loginSmtp.py  settings.py
utils/: FunctionsPhp.py  aiwm.py  bitbucket.py  checkElem.py  convert_fonts.py  create_project.py  cyr-to-lat.py  getGoogleData.py  getProjects.py  info.py  info.sh  layout_types.py  pages.py  parseArgs.py  plugins.py  runCommand.py  smtpHandler.py  taxonomies.py  themes.py  wp-images.py  wpPosts.py  wp_images.py
wp-acf-py/: acf.py
wp_files/: files.py
wp_files/wp_files/: checkCssLayout.py  checkHookLayout.py  checkInterfaceLayout.py  checkJsLayout.py  checkPhpComponentLayout.py  checkPhpLayout.py  checkPhpPageLayout.py  checkPiniaLayout.py  checkRestApiLayout.py  checkVueLayout.py  createHookFile.py  createInterfaceFile.py  createJavascriptFile.py  createOrChooseDirectory.py  (+8 more)
(+119 files in other folders)
