[project]
name = "my_project"
version = "0.1.0"
description = ""
dependencies = [
    "attrs==23.2.0",
    "autopep8==2.3.2",
    "certifi==2024.7.4",
    "charset-normalizer==3.3.2",
    "h11==0.14.0",
    "idna==3.7",
    "markdown-it-py==3.0.0",
    "mdurl==0.1.2",
    "outcome==1.3.0.post0",
    "pick==2.2.0",
    "plyer==2.1.0",
    "prettytable==3.10.0",
    "pycodestyle==2.13.0",
    "pyfzf==0.3.1",
    "pygments==2.18.0",
    "pyperclip==1.9.0",
    "pysocks==1.7.1",
    "requests==2.32.3",
    "rich==13.7.1",
    "ruff>=0.12.2",
    "selenium==4.23.1",
    "selenium-stealth==1.0.6",
    "simple-term-menu==1.6.4",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "termcolor==2.4.0",
    "trio==0.26.0",
    "trio-websocket==0.11.1",
    "typing-extensions==4.12.2",
    "undetected-chromedriver==3.5.5",
    "urllib3==2.2.2",
    "wcwidth==0.2.13",
    "websocket-client==1.8.0",
    "websockets==12.0",
    "wsproto==1.2.0",
]
[tool.ruff]
line-length = 88
exclude = [
    "migrations",
    "tests",
    "docs",
    "build",
    "dist",
    "venv",
    ".venv",
    ".git",
    "__pycache__",
]
fix = true
unsafe-fixes = true
target-version = "py312"  # <- specify Python 3.12 explicitly here

[tool.ruff.lint]
select = [
    "F401",  # Unused import
    "F403",  # Wildcard import
    "F405",  # Name may be undefined, or defined from star imports
    "F841",  # Local variable is assigned to but never used
    "E501",  # Line too long
    "I",     # Import sorting (isort-compatible)
]
