[project]
name = "wp-python"
version = "0.1.0"
description = ""
authors = [
    {name = "serii",email = "seriiburduja@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "attrs (==25.3.0)",
    "autopep8 (==2.3.2)",
    "certifi (==2025.7.14)",
    "charset-normalizer (==3.4.2)",
    "flake8 (==7.3.0)",
    "h11 (==0.16.0)",
    "idna (==3.10)",
    "markdown-it-py (==3.0.0)",
    "mccabe (==0.7.0)",
    "mdurl (==0.1.2)",
    "mypy (==1.17.0)",
    "mypy-extensions (==1.1.0)",
    "outcome (==1.3.0.post0)",
    "pathspec (==0.12.1)",
    "plyer (==2.1.0)",
    "pycodestyle (==2.14.0)",
    "pyflakes (==3.4.0)",
    "pyfzf (==0.3.1)",
    "pygments (==2.19.2)",
    "pyperclip (==1.9.0)",
    "pysocks (==1.7.1)",
    "requests==2.32.4",
    "rich (==14.0.0)",
    "selenium (==4.34.2)",
    "simple-term-menu (==1.6.6)",
    "sniffio (==1.3.1)",
    "sortedcontainers (==2.4.0)",
    "termcolor (==3.1.0)",
    "trio (==0.30.0)",
    "trio-websocket (==0.12.2)",
    "types-requests==2.32.4.20250611",
    "typing-extensions (==4.14.1)",
    "urllib3 (==2.5.0)",
    "websocket-client (==1.8.0)",
    "wsproto (==1.2.0)",
]


